@@ -224,7 +224,7 @@ fun parse_args is_symid =
   let
     val keyword_symid = token (Parse.keyword_with is_symid);
     fun atom blk = Parse.group "argument"
-      (ident || keyword_symid || string || alt_string ||
+      (ident || keyword_symid || string || alt_string || token Parse.float_number ||
         (if blk then token (Parse.$$$ ",") else Scan.fail));
 
     fun args blk x = Scan.optional (args1 blk) [] x
